--- a/Code/Kanchanah_Kannathass_CapStone2_Model.ipynb
+++ b/Code/Kanchanah_Kannathass_CapStone2_Model.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BASE_DIR = \"C:\\\\Users\\\\kk67\\\\Documents\\\\Documents\\\\Capstone\\\\\"\n",
+    "BASE_DIR = \"/Users/Avinash/Documents/Kanchanah/Springboard/Data_Science_Track/Capstone_Two_Other_Material/\"\n",
     "\n",
     "X_train = \"X_train.csv\"\n",
     "X_test = \"X_test.csv\"\n",
